--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "messages-aws",
+  "name": "messages-aws-rds",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,19 +8,25 @@
     "dev": ".\\node_modules\\.bin\\env-cmd -f .\\config\\dev.env nodemon .\\src\\index.js",
     "start": "node ./src/index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kerensht/messages-aws-server.git"
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kerensht/messages-aws-server/issues"
+  },
+  "homepage": "https://github.com/kerensht/messages-aws-server#readme",
   "dependencies": {
-    "axios": "^0.21.1",
-    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.11",
-    "validator": "^13.6.0"
+    "express": "^4.18.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.19.0"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.16"
   }
 }
